# tysh

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  same_type.rs
tests/: serde.rs  test_enum.rs  test_struct.rs
