[package]
name = "tysh-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Yume Hiramatsu <yuma.hiramatsu@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/eduidl/tysh"
description = """
This crate provides Tysh's derive macro
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
